add first ci build

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,55 @@ language: ruby
 rvm:
     - 2.5
 
+env:
+    - AWS_USER_ID:"780722053658" AWS_ECR_API="780722053658.dkr.ecr.us-east-2.amazonaws.com/arquichat-repo"
+services:
+    - docker
+    - postgresql
+branches:
+    only:
+        - main
+install:
+    - docker-compose build
+    - docker-compose run --rm web rails db:create db:schema:load
 
+script:
+    - docker-compose up -d
+    - sed -i -e 's/\r$/\n/' start.sh
+    - sed -i -e 's/\r$/\n/' stop.sh
+    - sed -i -e 's/\r$/\n/' install.sh
+    - zip -r latest *
+    - mkdir -p dpl_cd_upload
+    - mv latest.zip dpl_cd_upload/latest.zip
+
+after_success:
+    - docker --version
+    - pip install --user awscli
+    - export PATH=$PATH:$HOME/.local/bin
+    - eval $(aws ecr get-login --region us-east-2 --no-include-email)
+    - docker build -t $AWS_ECR_API:latest
+    - docker tag $AWS_ECR_API:latest
+    - docker push $AWS_ECR_API:latest
+    - docker images
+
+deploy:
+    - provider: s3
+        access_key_id: $AWS_ACCESS_KEY_ID
+        secret_access_key: $AWS_SECRET_ACCESS_KEY
+        local_dir: dpl_cd_upload
+        skip_cleanup: true
+        bucket: "arquichat-travis-deploy"
+        region: us-east-2
+        upload-dir: latest
+    - provider: codedeploy
+        access_key_id: $AWS_ACCESS_KEY_ID
+        secret_access_key: $AWS_SECRET_ACCESS_KEY
+        bucket: "arquichat-travis-deploy"
+        key: latest/latest.zip
+        bundle_type: zip
+        application: Arquichat
+        deployment_group: arquichat
+        region: us-east-2
+        wait_until_deployed: true
+        on:
+            branch: main
