--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,6 @@ rvm:
 
 env:
     - AWS_USER_ID:"780722053658" AWS_ECR_API="780722053658.dkr.ecr.us-east-2.amazonaws.com/arquichat-repo"
+services:
+    - docker
+    - postgresql
