--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,13 @@ branches:
         - main
 install:
     - docker-compose build
-    - docker-compose run --rm web rails db:create db:schema:load
+
+script:
+    - docker-compose up -d
+    - sed -i -e 's/\r$/\n/' start.sh
+    - sed -i -e 's/\r$/\n/' stop.sh
+    - sed -i -e 's/\r$/\n/' install.sh
+    - zip -r latest *
+    - mkdir -p dpl_cd_upload
+    - mv latest.zip dpl_cd_upload/latest.zip
+
