--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,34 @@ script:
     - mkdir -p dpl_cd_upload
     - mv latest.zip dpl_cd_upload/latest.zip
 
+after_success:
+    - docker --version
+    - pip install --user awscli
+    - export PATH=$PATH:$HOME/.local/bin
+    - eval $(aws ecr get-login --region us-east-2 --no-include-email)
+    - docker build -t $AWS_ECR_API:latest
+    - docker tag $AWS_ECR_API:latest
+    - docker push $AWS_ECR_API:latest
+    - docker images
+
+deploy:
+    - provider: s3
+        access_key_id: $AWS_ACCESS_KEY_ID
+        secret_access_key: $AWS_SECRET_ACCESS_KEY
+        local_dir: dpl_cd_upload
+        skip_cleanup: true
+        bucket: "arquichat-travis-deploy"
+        region: us-east-2
+        upload-dir: latest
+    - provider: codedeploy
+        access_key_id: $AWS_ACCESS_KEY_ID
+        secret_access_key: $AWS_SECRET_ACCESS_KEY
+        bucket: "arquichat-travis-deploy"
+        key: latest/latest.zip
+        bundle_type: zip
+        application: Arquichat
+        deployment_group: arquichat
+        region: us-east-2
+        wait_until_deployed: true
+        on:
+            branch: main
