--- a/.travis.yml
+++ b/.travis.yml
@@ -31,3 +31,25 @@ after_success:
     - docker tag $AWS_ECR_API:latest
     - docker push $AWS_ECR_API:latest
     - docker images
+
+deploy:
+    - provider: s3
+        access_key_id: $AWS_ACCESS_KEY_ID
+        secret_access_key: $AWS_SECRET_ACCESS_KEY
+        local_dir: dpl_cd_upload
+        skip_cleanup: true
+        bucket: "arquichat-travis-deploy"
+        region: us-east-2
+        upload-dir: latest
+    - provider: codedeploy
+        access_key_id: $AWS_ACCESS_KEY_ID
+        secret_access_key: $AWS_SECRET_ACCESS_KEY
+        bucket: "arquichat-travis-deploy"
+        key: latest/latest.zip
+        bundle_type: zip
+        application: Arquichat
+        deployment_group: arquichat
+        region: us-east-2
+        wait_until_deployed: true
+        on:
+            branch: main
