try install nothing

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ services:
 branches:
     only:
         - main
+install:
+    - echo "install nothing?"
 
 script:
     - sed -i -e 's/\r$/\n/' scripts/start.sh
