--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
 #    env_file:
 #      - ./.env_db
   web:
+    image: 780722053658.dkr.ecr.us-east-2.amazonaws.com/arquichat-repo:latest
     build: .
     command: bundle exec rails s -p 8080 -b '0.0.0.0'
     restart: always
