--- a/appspec.yml
+++ b/appspec.yml
@@ -10,14 +10,14 @@ permissions:
     owner: ubuntu
 hooks:
   ApplicationStop:
-    - location: stop.sh
+    - location: scripts/stop.sh
       timeout: 600
       runas: ubuntu
   AfterInstall:
-    - location: install.sh
+    - location: scripts/install.sh
       timeout: 600
       runas: ubuntu
   ApplicationStart:
-    - location: start.sh
+    - location: scripts/start.sh
       timeout: 600
       runas: ubuntu
