--- a/appspec.yml
+++ b/appspec.yml
@@ -10,7 +10,7 @@ permissions:
     owner: ubuntu
 hooks:
   ApplicationStop:
-    - location: scripts/stop.sh
+    - location: stop.sh
       timeout: 600
       runas: ubuntu
   AfterInstall:
@@ -18,6 +18,6 @@ hooks:
       timeout: 600
       runas: ubuntu
   ApplicationStart:
-    - location: scripts/start.sh
+    - location: start.sh
       timeout: 600
       runas: ubuntu
