--- a/appspec.yml
+++ b/appspec.yml
@@ -14,7 +14,7 @@ hooks:
       timeout: 600
       runas: ubuntu
   AfterInstall:
-    - location: scripts/install.sh
+    - location: install.sh
       timeout: 600
       runas: ubuntu
   ApplicationStart:
