--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,9 @@ install:
     - echo "install nothing?"
 
 script:
-    - echo "no tests yet"
+    - docker compose up -d
+    - echo "running tests"
+    - docker-compose exec web bundle exec rspec
     - sed -i -e 's/\r$/\n/' scripts/start.sh
     - sed -i -e 's/\r$/\n/' scripts/stop.sh
     - sed -i -e 's/\r$/\n/' scripts/install.sh
