--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
     - echo "install nothing?"
 
 script:
-    - docker compose up -d
+    - docker-compose up -d
     - echo "running tests"
     - docker-compose exec web bundle exec rspec
     - sed -i -e 's/\r$/\n/' scripts/start.sh
