--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ install:
     - echo "install nothing?"
 
 script:
+    - docker-compose build
+    - docker-compose run --rm web rails db:create db:schema:load db:migrate
     - docker-compose up -d
     - echo "running tests"
     - docker-compose exec web bundle exec rspec
