--- a/appspec.yml
+++ b/appspec.yml
@@ -2,22 +2,22 @@ version: 0.0
 os: linux
 
 files:
-  - source: ./scripts
-    destination: /home/ubuntu/iic2173-proyecto-semestral-grupo9/
+  - source: scripts
+    destination: /home/ubuntu/iic2173-proyecto-semestral-grupo9
 permissions:
-  - object: ./scripts
+  - object: scripts
     pattern: "**"
     owner: ubuntu
 hooks:
   ApplicationStop:
-    - location: ./scripts/stop.sh
+    - location: stop.sh
       timeout: 600
       runas: ubuntu
   AfterInstall:
-    - location: ./scripts/install.sh
+    - location: install.sh
       timeout: 600
       runas: ubuntu
   ApplicationStart:
-    - location: ./scripts/start.sh
+    - location: start.sh
       timeout: 600
       runas: ubuntu
