--- a/appspec.yml
+++ b/appspec.yml
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 
 files:
-  - source: scripts
+  - source: /
     destination: /home/ubuntu/iic2173-proyecto-semestral-grupo9
 permissions:
   - object: scripts
@@ -10,14 +10,14 @@ permissions:
     owner: ubuntu
 hooks:
   ApplicationStop:
-    - location: stop.sh
+    - location: scripts/stop.sh
       timeout: 600
       runas: ubuntu
   AfterInstall:
-    - location: install.sh
+    - location: scripts/install.sh
       timeout: 600
       runas: ubuntu
   ApplicationStart:
-    - location: start.sh
+    - location: scripts/start.sh
       timeout: 600
       runas: ubuntu
