--- a/appspec.yml
+++ b/appspec.yml
@@ -14,13 +14,13 @@ hooks:
   ApplicationStop:
     - location: scripts/stop.sh
       timeout: 600
-      runas: root
+      owner: root
   AfterInstall:
     - location: scripts/install.sh
       timeout: 600
-      runas: root
+      owner: root
   ApplicationStart:
     - location: scripts/start.sh
       timeout: 600
-      runas: root
+      owner: root
 
