--- a/appspec.yml
+++ b/appspec.yml
@@ -9,18 +9,18 @@ files:
 permissions:
   - object: scripts
     pattern: "**"
-    owner: root
+    owner: ubuntu
 hooks:
   ApplicationStop:
     - location: scripts/stop.sh
       timeout: 600
-      owner: root
+      runas: root
   AfterInstall:
     - location: scripts/install.sh
       timeout: 600
-      owner: root
+      runas: root
   ApplicationStart:
     - location: scripts/start.sh
       timeout: 600
-      owner: root
+      runas: root
 
