--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,11 @@ install:
     - echo "install nothing?"
 
 script:
+    - docker-compose build
+    - docker-compose run --rm web bundle install
+    - docker-compose run --rm web rails db:create db:schema:load
+    - docker-compose up -d
+    - docker-compose exec web bundle exec rspec
     - echo "running tests"
     - sed -i -e 's/\r$/\n/' scripts/start.sh
     - sed -i -e 's/\r$/\n/' scripts/stop.sh
