add echo env to script

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,9 @@ script:
     - cd iic2173-proyecto-semestral-grupo9
     - docker-compose build
     - docker-compose run --rm web bundle install
+    - echo "POSTGRES_HOST = $POSTGRES_HOST" >> .env
+    - echo "POSTGRES_USER = $POSTGRES_USER" >> .env
+    - echo "POSTGRES_PASSWORD = $POSTGRES_PASSWORD" >> .env
     - docker-compose run --rm web rails db:create db:schema:load
     - docker-compose up -d
     - docker-compose exec web bundle exec rspec
