--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,8 @@ script:
     - docker-compose up -d
     - docker-compose exec web bundle exec rspec
     - echo "running tests"
+    - docker-compose stop
+    - docker-compose down
     - cd ..
     - sed -i -e 's/\r$/\n/' scripts/start.sh
     - sed -i -e 's/\r$/\n/' scripts/stop.sh
@@ -29,6 +31,7 @@ script:
     - zip -r latest *
     - mkdir -p dpl_cd_upload
     - mv latest.zip dpl_cd_upload/latest.zip
+
 
 after_success:
     - cd iic2173-proyecto-semestral-grupo9
